<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.fileuploading.fragments.FtpConfigFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/Ftp_properties_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:text="@string/Ftp_properties_title"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/FtpName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/Ftp_properties_title"
            android:layout_marginTop="5sp"
            android:hint="@string/ftp_name_input" />

        <EditText
            android:id="@+id/FtpHost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/FtpName"
            android:layout_marginTop="5sp"
            android:autofillHints=""
            android:hint="@string/FtpHostName"
            android:inputType="text" />

        <EditText
            android:id="@+id/FtpUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/FtpHost"
            android:layout_marginTop="5sp"
            android:autofillHints=""
            android:hint="@string/FtpUserText"
            android:inputType="text" />

        <EditText
            android:id="@+id/FtpPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/FtpUser"
            android:layout_marginTop="5sp"
            android:autofillHints=""
            android:hint="@string/FtpPass"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/SaveFtp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/FtpPass"
            android:text="@string/save_ftp" />
    </RelativeLayout>

</FrameLayout>