<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fileuploading.fragments.StartUploadFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/ScrollDirectories"
            android:layout_width="match_parent"
            android:layout_height="200sp">

            <TextView
                android:id="@+id/DirectoriesSummary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </ScrollView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/DestinyLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ScrollDirectories"
            app:helperText="@string/destiny_path_example"
            app:helperTextEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/DestinyPath"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ScrollDirectories"
                android:layout_marginTop="10sp"
                android:hint="@string/destiny_path"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>


        <CheckBox
            android:id="@+id/DeleteDeviceElements"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/DestinyLayout"
            android:layout_marginTop="10sp"
            android:text="@string/DeleteDeviceElements" />

        <CheckBox
            android:id="@+id/GetFilesRecursive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/DeleteDeviceElements"
            android:text="@string/get_files_recursive" />

        <CheckBox
            android:id="@+id/FoldUpByDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/GetFilesRecursive"
            android:text="@string/fold_up_by_name" />

        <Button
            android:id="@+id/StartUpload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/FoldUpByDate"
            android:text="@string/start_Upload" />
    </RelativeLayout>

</FrameLayout>